Initialise fusion plot
Init click event to the fusion pie chart
Retrieve exons from genome nexus
Init render rest of exons
Stash changes
Add coloring for different sites
Add legend for pie chart
Apply dynamic coloring
Apply coloring to exon bar chart and tooltip in piechart
Some refactoring
Refactor to use newly named data store interface
Refactor fusion bar chart
Add validation for long gene transcripts
Fix color scale
Clean code
Align label to middle right
Apply dynamic alignments
Fix unit testing for fusions by gene
Add delta for x position
Refactor code
Add tooltip on each exon block
Refactor code and change labelling in tooltip
Refactor entity models for fusion stores
Fix ts compile errors
Init pFam bar
Generate pfam bar plot on each reference genes
Refactor codes
Append pfam name and description
Introduce untranslated transcript as new attribute in ensembl transcript
Fix grouping bug in fusion pie chart
Resize fusion pie chart
Refactor fusion mapper store
Add total length of five prime untranslated region
Fix failing unit testing
Incooperate total length of five primes when calculating pfam domain x coordinate
Fix bugs
Add loading indicator when ensembl transcripts are being loaded
Refactor code
Revert rc.sh
Fix label positioning for pfam
Refactor due to updateAPI
Refactor fusion models
Refactor fetch structural variant parameters
Refactor code
Change default visible table columns in fusion table
Update npm packages due to vulnerabilities
Update package lock
Refactor result view fusion
Refactor folder names
Add conditional pie chart label
Refactor fusion charts
Refactor fusion stores
