# src/shared/api/generated/CBioPortalAPI-docs.json
@@ -72,6 +72,10 @@
       "description": " "
     },
     {
+      "name": "Structural Variants",
+      "description": " "
+    },
+    {
       "name": "Studies",
       "description": " "
     }
@@ -2374,6 +2378,43 @@
               "type": "array",
               "items": {
                 "$ref": "#/definitions/Sample"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/structuralvariant/fetch": {
+      "post": {
+        "tags": [
+          "Structural Variants"
+        ],
+        "summary": "Fetch structural variants for entrezGeneIds and molecularProfileIds or sampleMolecularIdentifiers",
+        "operationId": "fetchStructuralVariantsUsingPOST",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "structuralVariantFilter",
+            "description": "List of entrezGeneIds and molecularProfileIds or sampleMolecularIdentifiers",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/StructuralVariantFilter"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/StructuralVariant"
               }
             }
           }
@@ -5029,6 +5070,195 @@
         }
       },
       "title": "SampleMolecularIdentifier"
+    },
+    "StructuralVariant": {
+      "type": "object",
+      "properties": {
+        "annotation": {
+          "type": "string"
+        },
+        "breakpointType": {
+          "type": "string"
+        },
+        "center": {
+          "type": "string"
+        },
+        "comments": {
+          "type": "string"
+        },
+        "connectionType": {
+          "type": "string"
+        },
+        "dnaSupport": {
+          "type": "string"
+        },
+        "driverFilter": {
+          "type": "string"
+        },
+        "driverFilterAnn": {
+          "type": "string"
+        },
+        "driverTiersFilter": {
+          "type": "string"
+        },
+        "driverTiersFilterAnn": {
+          "type": "string"
+        },
+        "eventInfo": {
+          "type": "string"
+        },
+        "externalAnnotation": {
+          "type": "string"
+        },
+        "length": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "molecularProfileId": {
+          "type": "string"
+        },
+        "ncbiBuild": {
+          "type": "string"
+        },
+        "normalPairedEndReadCount": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "normalReadCount": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "normalSplitReadCount": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "normalVariantCount": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "patientId": {
+          "type": "string"
+        },
+        "rnaSupport": {
+          "type": "string"
+        },
+        "sampleId": {
+          "type": "string"
+        },
+        "sampleIdInternal": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "site1Chromosome": {
+          "type": "string"
+        },
+        "site1Description": {
+          "type": "string"
+        },
+        "site1EnsemblTranscriptId": {
+          "type": "string"
+        },
+        "site1EntrezGeneId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "site1Exon": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "site1HugoSymbol": {
+          "type": "string"
+        },
+        "site1Position": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "site2Chromosome": {
+          "type": "string"
+        },
+        "site2Description": {
+          "type": "string"
+        },
+        "site2EffectOnFrame": {
+          "type": "string"
+        },
+        "site2EnsemblTranscriptId": {
+          "type": "string"
+        },
+        "site2EntrezGeneId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "site2Exon": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "site2HugoSymbol": {
+          "type": "string"
+        },
+        "site2Position": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "structuralVariantId": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "studyId": {
+          "type": "string"
+        },
+        "tumorPairedEndReadCount": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "tumorReadCount": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "tumorSplitReadCount": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "tumorVariantCount": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "uniquePatientKey": {
+          "type": "string"
+        },
+        "uniqueSampleKey": {
+          "type": "string"
+        },
+        "variantClass": {
+          "type": "string"
+        }
+      },
+      "title": "StructuralVariant"
+    },
+    "StructuralVariantFilter": {
+      "type": "object",
+      "properties": {
+        "entrezGeneIds": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "int32"
+          }
+        },
+        "molecularProfileIds": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "sampleMolecularIdentifiers": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/SampleMolecularIdentifier"
+          }
+        }
+      },
+      "title": "StructuralVariantFilter"
     },
     "TypeOfCancer": {
       "type": "object",
